--- a/index.ipynb
+++ b/index.ipynb
@@ -1371,8 +1371,10 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    new_list=sorted(neighbors, key = lambda i: i['distance']) \n",
-    "    del new_list[0]\n",
-    "    return new_list\n",
+    "    for i in range(len(new_list)):\n",
+    "        if new_list[i]['name']==first_neighbor['name']:\n",
+    "            d new_list[i]\n",
+    "    \n",
     "    \n",
     "\n",
     "        \n",
